sitemedia/scss/base/_navigation.scss
/* header and footer styles */
@import "variables";

header.nav {
    height: $header-nav-height;
    width: 100%;
    position: fixed;
    text-align: center;
    background-color: rgba(255, 255, 255, 0.95);
    left: 0;
    top: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    transition: margin-top 0.25s;

    @media (max-width: $small-max-width) {
        height: 50px;

    }

    z-index: 10;
    &.hidden {
        margin-top: -90px;
    }

     a {
        color: #000000;
        text-decoration: none;
        padding-bottom: 14px;
        &:focus,
        &:hover,
        &:visited {
            text-decoration: none;
            color: #000000;
        }
        &.current-page {
            border-bottom: 4px;
            border-bottom-color: $cdh-blue;
            border-bottom-style: solid;
        }

        @media (max-width: $small-max-width) {
            padding-bottom: 0;
        }
    }

    .mobile-nav  {
        display: none;
        @media (max-width: $small-max-width) {
            padding-top: 10px;
            padding-bottom: 0;
            display: block;
            width: 84%;  // TODO: make this a variable
            text-align: left;
            left: 0;
        }
        a {
          color: $black;
        }

    }
    #mainmenu {
        @media (max-width: $small-max-width) {
            background-color: white;
            width: 100%;
            max-width: 100%;  /* cancel 84% max-width */
            padding: 5px 8%;
            border-bottom: 1px solid $dark-grey;
        }
    }

    nav {
        @extend .responsive-container;
        padding: 22px 0;
        display: flex;
        flex-direction: row;
        a.home-page {
            width: 60px;
            height: 44.8px;
            margin-right: 36.2px;
            img {
                flex: auto;
                width: auto;
                height: 60px;
            }

        }
        @media (max-width: $small-max-width) {
            display: none;
            text-align: left;
            max-width: 100%;
        }

    }
    section {
        display: flex;
        flex-direction: column;
        flex: auto;
        padding: 0;


        ul {
            display: flex;
            flex: auto;
            text-align: left;
            padding: 0;
            width: 100%;
            height: 15px;
            // Make sure margins behave for spacing between rows (~28 px)
            margin-bottom: 14px;
            margin-top: 14px;

            @media (max-width: $small-max-width) {
                height: auto;
                display: block;
                flex: none;
            }

            &.primary-nav {
                margin: 0;
                text-transform: uppercase;
                padding-bottom: 14px;
                height: auto;
                li {
                    flex: auto;
                    @media (max-width: $small-max-width) {
                        margin-bottom: 5px;
                    }
                }
            }

            li {
                font-family: $font-stack-headline-bold;
                font-size: 12px;
                color: #000000;
                display: inline;
                margin-right: 40px;
                @media (max-width: $small-max-width) {
                    display: block;
                }

            }

            &.secondary-nav {
                border-top: solid 1px #d8d8d8;
                margin-top: 0;
                padding-top: 10px;
                font-family: $font-stack-headline;
                font-weight: normal;
            }
        }
    }
}


footer {
    padding-top: 150px;

    section.contact {
        // margin-top: 156px;
        position: relative;
        border-top: 0;
        height: auto;
        display: flex;
        flex-direction: row;

        font-family: $font-stack-headline;
        font-size: 12px;
        color: $dark-grey;

        .contact-info {
            flex-grow: 5;
            flex-basis: 83.5%;
        }

        .social {
            flex-grow: 1;
            flex-basis: 16.5%;
            padding-bottom: 15px;
        }

        @media (max-width: $small-max-width) {
            margin-top: 15px;
            flex-direction: column;
            .social {
                order: 1;
            }
            .contact-info {
                order: 2;
            }
        }

        /* software version */
        .sw-version {
           font-size: small;
           position: absolute;
           right: 0;
           bottom: 5px;
        }

    }

    section {
        @extend .responsive-container;
        height: 175px;
        width: 100%;
        overflow: hidden;
        border-top: 1px;
        border-top-style: solid;
        border-top-color: #d8d8d8;
        padding-top: 20px;

        @media (max-width: $small-max-width) {
            height: auto;
        }


         a {
            color: #000000;
            text-decoration: none;
            &:focus,
            &:hover,
            &:visited {
                text-decoration: none;
                color: #000000;
            }
            span.fa {
                font-size: 20px;
                height: 20px;
                width: 20px;
                color: $dark-grey !important;
            }
        }


        ul {
            display: flex;
            flex-direction: column;
            flex-wrap: wrap;
            justify-content: space-evenly;
            height: 125px;
            padding: 0;

            @media (max-width: $small-max-width) {
                width: 100%;
                height: auto;
            }

            &> li {
                display: inline;
                flex: auto;
                flex-grow: 1;
                max-width: 135px;
                color: #000000;
                margin-top: 6px;
                // margin-bottom: 6px;
                margin-left: 0;
                font-family: $font-stack-headline;
                font-size: 12px;
                &.menu-header {
                    font-family: $font-stack-headline-bold;
                    position: relative;

                    &> a {
                        text-transform: uppercase;
                    }

                    /* use as spacer in desktop view */
                    .toggle {
                        opacity: 0;
                        min-height: 175px;
                        display: inline-block;
                        float: right;
                        width: 1em;
                        &:hover {
                            cursor: pointer;
                        }
                    }

                    @media (max-width: $small-max-width) {
                        border-bottom: 1px solid #d8d8d8;
                        margin-top: 8px;
                        padding-bottom: 5px;
                        width: 100%;
                        max-width: none;

                        .toggle {
                            opacity: 1;
                            min-height: auto;
                            float: none;
                            display: inline-block;
                            position: absolute;
                            right: 0;
                            top: 0;
                        }
                        .submenu {
                            display: none;  /* hide by default on mobile */

                            li {
                                display: block;
                                max-width: none;
                            }
                        }

                    }
                }

                .submenu {
                    display: block;
                    height: auto;
                    li {
                        display: block;
                    }
                }

                &.menu-header.open {
                    @media (max-width: $small-max-width) {
                        .toggle {
                            -webkit-transform: rotate(45deg);
                            transform: rotate(45deg);
                        }
                    }
                }

            }
        }
    }
}

